--- a/data/lang/ru.xml
+++ b/data/lang/ru.xml
@@ -178,6 +178,8 @@
     <tank ID="Ch26_59_Patton" sName="59-Patton" lName="59-Patton" />
     <tank ID="Ch28_WZ_132A" sName="WZ-132A" lName="WZ-132A" />
     <tank ID="Ch29_Type_62C_prot" sName="WZ-132-1" lName="WZ-132-1" />
+    <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
+    <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -334,6 +336,8 @@
     <tank ID="G125_Spz_57_Rh" sName="Rhm. Pzw." lName="Rheinmetall Panzerwagen" />
     <tank ID="G126_HWK_12" sName="HWK 12" lName="HWK 12" />
     <tank ID="G13_VK3001H" sName="VK 30.01 H" lName="VK 30.01 (H)" />
+    <tank ID="G134_PzKpfw_VII" sName="Pz.Kpfw. VII" lName="Pz.Kpfw. VII" />
+    <tank ID="G136_Tiger_131" sName="Tiger 131" lName="Tiger 131" />
     <tank ID="G14_PzIII_A" sName="Pz. III E" lName="Pz.Kpfw. III Ausf. E" />
     <tank ID="G15_VK3601H" sName="VK 36.01 H" lName="VK 36.01 (H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
@@ -552,6 +556,8 @@
     <tank ID="J26_Type_89" sName="I-Go/Chi-Ro" lName="Type 89 I-Go/Chi-Ro" />
     <tank ID="J27_O_I_120" sName="O-Ho" lName="O-Ho" />
     <tank ID="J28_O_I_100" sName="O-Ni" lName="O-Ni" />
+    <tank ID="J29_Nameless" sName="Nameless" lName="Nameless" />
+    <tank ID="J30_Edelweiss" sName="Edelweiss" lName="Edelweiss" />
     <tank ID="JagdPanther" sName="JPanther" lName="Jagdpanther" />
     <tank ID="JagdPantherII" sName="JPanther II" lName="Jagdpanther II" />
     <tank ID="JagdPz_E100" sName="Jg.Pz. E 100" lName="Jagdpanzer E 100" />
@@ -735,7 +741,9 @@
     <tank ID="R133_KV_122" sName="КВ-122" lName="КВ-122" />
     <tank ID="R134_Object_252K" sName="Защитник" lName="Объект 252У Защитник" />
     <tank ID="R134_Object_252U" sName="Об. 252У" lName="Объект 252У" />
+    <tank ID="R135_T_103" sName="Т-103" lName="Т-103" />
     <tank ID="R14_SU-5" sName="СУ-5" lName="СУ-5" />
+    <tank ID="R143_T_29" sName="Т-29" lName="Т-29" />
     <tank ID="R15_S-51" sName="С-51" lName="С-51" />
     <tank ID="R16_SU-18" sName="СУ-18" lName="СУ-18" />
     <tank ID="R17_SU-100" sName="СУ-100" lName="СУ-100" />
@@ -1028,8 +1036,7 @@
     <item ID="92_stalingrad" Name="Сталинград" />
     <item ID="95_lost_city" Name="Затерянный город" />
     <item ID="96_prohorovka_defense" Name="Огненная дуга" />
-    <item ID="h11_WGL_GrandFinal_2016" />
-    <item ID="h12_bday_EU_2015" />
+    <item ID="h13_bovtankfest_2016" />
     <item ID="03_campania" />
     <item ID="15_komarin" />
     <item ID="39_crimea" />
@@ -1057,7 +1064,6 @@
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
     <item ID="h10_summer_holiday_2016" />
-    <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="Химмельштадион" />
     <item ID="117_eiffelball" Name="Стад Эйфель" />
     <item ID="118_lostcityball" Name="Заброшенный стадион" />
@@ -1950,7 +1956,7 @@
     <PM name="САУ-5. Загоризонтная поддержка" short="«StuG IV»: САУ-5. Загоризонтная поддержка" desc="Оглушая противника, вы не только помогаете команде победить, но и зарабатываете опыт и кредиты, если союзники ведут эффективный огонь по оглушённым вами целям. Не забывайте отмечать область, на которую сводитесь (клавиша T по умолчанию), чтобы обратить на неё внимание союзников." tMID="65" opID="1" mID="5" setID="5" ID="quest_1_5_5_main" secID="quest_1_5_5_add" minLvl="4" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«StuG IV»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Помочь союзникам нанести не менее 600 урона, оглушив или обездвижив технику противника.</req>
+        <req>• Помочь союзникам нанести не менее 600 урона, оглушив и/или обездвижив технику противника.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Выстрелами или тараном нанести урон технике противника не менее 3 раз.</req>
@@ -1959,7 +1965,7 @@
     <PM name="САУ-6. Молот Тора" short="«StuG IV»: САУ-6. Молот Тора" desc="Вы — поддержка команды. С оглушёнными целями разбираться проще, поэтому союзники будут вам только благодарны за ваши успешные попадания. Помните, что не очень удачный выстрел может оглушить и союзника: старайтесь этого избегать." tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«StuG IV»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Помочь союзникам нанести урон по 2 и более оглушённым или обездвиженным вами машинам противника.</req>
+        <req>• Оглушить или обездвижить не менее 2 разных машин противника.\n• Союзники должны нанести урон каждой из 2 оглушённых или обездвиженных вами машин противника.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Победить в бою.</req>
@@ -2040,7 +2046,7 @@
     <PM name="САУ-15. Боги войны" short="«StuG IV»: САУ-15. Боги войны" desc="Выживание САУ — залог успеха команды. Не подставляйтесь под огонь противника и отправляйте снаряды в цель один за другим. Не торопитесь стрелять, трижды подумайте перед тем, как «спустить курок», так как ваша длительная перезарядка диктует правило «1 выстрел — 1 попадание»." tMID="75" opID="1" mID="15" setID="5" ID="quest_1_5_15_main" secID="quest_1_5_15_add" minLvl="4" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«StuG IV»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Попасть в топ-5 игроков своей команды по опыту.\n• Помочь союзникам нанести не менее 1000 урона, оглушив или обездвижив технику противника.</req>
+        <req>• Попасть в топ-5 игроков своей команды по опыту.\n• Помочь союзникам нанести не менее 1000 урона, оглушив и/или обездвижив технику противника.</req>
       </Primary>
       <Secondary fXP="0" cr="50000" slots="0" tokens="1" done="false">
         <req>• Выжить в бою.</req>
@@ -2625,7 +2631,7 @@
     <PM name="САУ-5. Загоризонтная поддержка" short="«Т28 Heavy Tank Concept»: САУ-5. Загоризонтная поддержка" desc="Оглушая противника, вы не только помогаете команде победить, но и зарабатываете опыт и кредиты, если союзники ведут эффективный огонь по оглушённым вами целям. Не забывайте отмечать область, на которую сводитесь (клавиша T по умолчанию), чтобы обратить на неё внимание союзников." tMID="140" opID="2" mID="5" setID="5" ID="quest_2_5_5_main" secID="quest_2_5_5_add" minLvl="5" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Т28 Heavy Tank Concept»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Помочь союзникам нанести не менее 1000 урона, оглушив или обездвижив технику противника.</req>
+        <req>• Помочь союзникам нанести не менее 1000 урона, оглушив и/или обездвижив технику противника.</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="0" done="false">
         <req>• Выстрелами или тараном нанести урон технике противника не менее 5 раз.</req>
@@ -2634,7 +2640,7 @@
     <PM name="САУ-6. Молот Тора" short="«Т28 Heavy Tank Concept»: САУ-6. Молот Тора" desc="Вы — поддержка команды. С оглушёнными целями разбираться проще, поэтому союзники будут вам только благодарны за ваши успешные попадания. Помните, что не очень удачный выстрел может оглушить и союзника: старайтесь этого избегать." tMID="141" opID="2" mID="6" setID="5" ID="quest_2_5_6_main" secID="quest_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Т28 Heavy Tank Concept»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Помочь союзникам нанести урон по 3 и более оглушённым или обездвиженным вами машинам противника.</req>
+        <req>• Оглушить или обездвижить не менее 3 разных машин противника.\n• Союзники должны нанести урон каждой из 3 оглушённых или обездвиженных вами машин противника.</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="0" done="false">
         <req>• Победить в бою.</req>
@@ -2715,7 +2721,7 @@
     <PM name="САУ-15. Боги войны" short="«Т28 Heavy Tank Concept»: САУ-15. Боги войны" desc="Выживание САУ — залог успеха команды. Не подставляйтесь под огонь противника и отправляйте снаряды в цель один за другим. Не торопитесь стрелять, трижды подумайте перед тем, как «спустить курок», так как ваша длительная перезарядка диктует правило «1 выстрел — 1 попадание»." tMID="150" opID="2" mID="15" setID="5" ID="quest_2_5_15_main" secID="quest_2_5_15_add" minLvl="5" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Т28 Heavy Tank Concept»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Попасть в топ-3 игроков своей команды по опыту.\n• Помочь союзникам нанести не менее 1500 урона, оглушив или обездвижив технику противника.</req>
+        <req>• Попасть в топ-3 игроков своей команды по опыту.\n• Помочь союзникам нанести не менее 1500 урона, оглушив и/или обездвижив технику противника.</req>
       </Primary>
       <Secondary fXP="0" cr="100000" slots="0" tokens="1" done="false">
         <req>• Выжить в бою.</req>
@@ -3300,7 +3306,7 @@
     <PM name="САУ-5. Загоризонтная поддержка" short="«Т 55A»: САУ-5. Загоризонтная поддержка" desc="Оглушая противника, вы не только помогаете команде победить, но и зарабатываете опыт и кредиты, если союзники ведут эффективный огонь по оглушённым вами целям. Не забывайте отмечать область, на которую сводитесь (клавиша T по умолчанию), чтобы обратить на неё внимание союзников." tMID="215" opID="3" mID="5" setID="5" ID="quest_3_5_5_main" secID="quest_3_5_5_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Т 55A»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Помочь союзникам нанести не менее 2000 урона, оглушив или обездвижив технику противника.</req>
+        <req>• Помочь союзникам нанести не менее 2000 урона, оглушив и/или обездвижив технику противника.</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="0" done="false">
         <req>• Выстрелами или тараном нанести урон технике противника не менее 6 раз.</req>
@@ -3309,7 +3315,7 @@
     <PM name="САУ-6. Молот Тора" short="«Т 55A»: САУ-6. Молот Тора" desc="Вы — поддержка команды. С оглушёнными целями разбираться проще, поэтому союзники будут вам только благодарны за ваши успешные попадания. Помните, что не очень удачный выстрел может оглушить и союзника: старайтесь этого избегать." tMID="216" opID="3" mID="6" setID="5" ID="quest_3_5_6_main" secID="quest_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Т 55A»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Помочь союзникам нанести урон по 5 и более оглушённым или обездвиженным вами машинам противника.</req>
+        <req>• Оглушить или обездвижить не менее 5 разных машин противника.\n• Союзники должны нанести урон каждой из 5 оглушённых или обездвиженных вами машин противника.</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="0" done="false">
         <req>• Победить в бою.\n• Выжить в бою.</req>
@@ -3390,7 +3396,7 @@
     <PM name="САУ-15. Боги войны" short="«Т 55A»: САУ-15. Боги войны" desc="Выживание САУ — залог успеха команды. Не подставляйтесь под огонь противника и отправляйте снаряды в цель один за другим. Не торопитесь стрелять, трижды подумайте перед тем, как «спустить курок», так как ваша длительная перезарядка диктует правило «1 выстрел — 1 попадание»." tMID="225" opID="3" mID="15" setID="5" ID="quest_3_5_15_main" secID="quest_3_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Т 55A»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Занять 1 место среди игроков своей команды по опыту.\n• Помочь союзникам нанести не менее 2500 урона, оглушив или обездвижив технику противника.</req>
+        <req>• Занять 1 место среди игроков своей команды по опыту.\n• Помочь союзникам нанести не менее 2500 урона, оглушив и/или обездвижив технику противника.</req>
       </Primary>
       <Secondary fXP="0" cr="250000" slots="0" tokens="1" done="false">
         <req>• Выжить в бою.</req>
@@ -3975,7 +3981,7 @@
     <PM name="САУ-5. Загоризонтная поддержка" short="«Объект 260»: САУ-5. Загоризонтная поддержка" desc="Оглушая противника, вы не только помогаете команде победить, но и зарабатываете опыт и кредиты, если союзники ведут эффективный огонь по оглушённым вами целям. Не забывайте отмечать область, на которую сводитесь (клавиша T по умолчанию), чтобы обратить на неё внимание союзников." tMID="290" opID="4" mID="5" setID="5" ID="quest_4_5_5_main" secID="quest_4_5_5_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Объект 260»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Помочь союзникам нанести не менее 3000 урона, оглушив или обездвижив технику противника.</req>
+        <req>• Помочь союзникам нанести не менее 3000 урона, оглушив и/или обездвижив технику противника.</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• Выстрелами или тараном нанести урон технике противника не менее 8 раз.</req>
@@ -3984,7 +3990,7 @@
     <PM name="САУ-6. Молот Тора" short="«Объект 260»: САУ-6. Молот Тора" desc="Вы — поддержка команды. С оглушёнными целями разбираться проще, поэтому союзники будут вам только благодарны за ваши успешные попадания. Помните, что не очень удачный выстрел может оглушить и союзника: старайтесь этого избегать." tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Объект 260»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Помочь союзникам нанести урон по 6 и более оглушённым или обездвиженным вами машинам противника.</req>
+        <req>• Оглушить или обездвижить не менее 6 разных машин противника.\n• Союзники должны нанести урон каждой из 6 оглушённых или обездвиженных вами машин противника.</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• Победить в бою.\n• Выжить в бою.</req>
@@ -4065,7 +4071,7 @@
     <PM name="САУ-15. Боги войны" short="«Объект 260»: САУ-15. Боги войны" desc="Выживание САУ — залог успеха команды. Не подставляйтесь под огонь противника и отправляйте снаряды в цель один за другим. Не торопитесь стрелять, трижды подумайте перед тем, как «спустить курок», так как ваша длительная перезарядка диктует правило «1 выстрел — 1 попадание»." tMID="300" opID="4" mID="15" setID="5" ID="quest_4_5_15_main" secID="quest_4_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Объект 260»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Занять 1 место среди игроков обеих команд по опыту.\n• Помочь союзникам нанести не менее 3500 урона, оглушив или обездвижив технику противника.</req>
+        <req>• Занять 1 место среди игроков обеих команд по опыту.\n• Помочь союзникам нанести не менее 3500 урона, оглушив и/или обездвижив технику противника.</req>
       </Primary>
       <Secondary fXP="0" cr="500000" slots="0" tokens="1" done="false">
         <req>• Выжить в бою.</req>
