--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -178,6 +178,8 @@
     <tank ID="Ch26_59_Patton" sName="59-巴顿" lName="59-巴顿" />
     <tank ID="Ch28_WZ_132A" />
     <tank ID="Ch29_Type_62C_prot" />
+    <tank ID="Ch39_WZ120_1G_FT" />
+    <tank ID="Ch40_WZ120G_FT" />
     <tank ID="Chi_Ha" sName="九七中战" lName="九七中战" />
     <tank ID="Chi_He" sName="一式中战" lName="一式中战" />
     <tank ID="Chi_Ni" sName="九七原型车" lName="九七原型车" />
@@ -334,6 +336,8 @@
     <tank ID="G125_Spz_57_Rh" />
     <tank ID="G126_HWK_12" />
     <tank ID="G13_VK3001H" sName="VK3001(H)" lName="VK3001(H)" />
+    <tank ID="G134_PzKpfw_VII" />
+    <tank ID="G136_Tiger_131" />
     <tank ID="G14_PzIII_A" sName="III号坦克E型" lName="III号坦克E型" />
     <tank ID="G15_VK3601H" sName="VK3601(H)" lName="VK3601(H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="\" lName="\" />
@@ -552,6 +556,8 @@
     <tank ID="J26_Type_89" sName="八九式" lName="八九式" />
     <tank ID="J27_O_I_120" sName="120吨V型" lName="120吨V型" />
     <tank ID="J28_O_I_100" sName="120吨IV型" lName="120吨IV型" />
+    <tank ID="J29_Nameless" />
+    <tank ID="J30_Edelweiss" />
     <tank ID="JagdPanther" sName="\" lName="\" />
     <tank ID="JagdPantherII" sName="\" lName="\" />
     <tank ID="JagdPz_E100" sName="E-100坦克歼击车" lName="E-100坦克歼击车" />
@@ -735,7 +741,9 @@
     <tank ID="R133_KV_122" sName="KV-122" lName="KV-122" />
     <tank ID="R134_Object_252K" sName="252工程" lName="252工程" />
     <tank ID="R134_Object_252U" sName="252工程" lName="252工程" />
+    <tank ID="R135_T_103" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
+    <tank ID="R143_T_29" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -1028,8 +1036,7 @@
     <item ID="92_stalingrad" Name="斯大林格勒" />
     <item ID="95_lost_city" Name="失落小镇" />
     <item ID="96_prohorovka_defense" Name="烈焰丘陵" />
-    <item ID="h11_WGL_GrandFinal_2016" />
-    <item ID="h12_bday_EU_2015" />
+    <item ID="h13_bovtankfest_2016" />
     <item ID="03_campania" />
     <item ID="15_komarin" />
     <item ID="39_crimea" />
@@ -1057,7 +1064,6 @@
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
     <item ID="h10_summer_holiday_2016" />
-    <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="锡城球场" />
     <item ID="117_eiffelball" Name="艾菲尔球场" />
     <item ID="118_lostcityball" Name="失落小镇球场" />
