--- a/data/lang/fi.xml
+++ b/data/lang/fi.xml
@@ -178,6 +178,8 @@
     <tank ID="Ch26_59_Patton" sName="59-Patton" lName="59-Patton" />
     <tank ID="Ch28_WZ_132A" sName="WZ-132A" lName="WZ-132A" />
     <tank ID="Ch29_Type_62C_prot" sName="WZ-132-1" lName="WZ-132-1" />
+    <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
+    <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -334,6 +336,8 @@
     <tank ID="G125_Spz_57_Rh" sName="Rhm. Pzw." lName="Rheinmetall Panzerwagen" />
     <tank ID="G126_HWK_12" sName="HWK 12" lName="HWK 12" />
     <tank ID="G13_VK3001H" sName="VK 30.01 H" lName="VK 30.01 (H)" />
+    <tank ID="G134_PzKpfw_VII" sName="Pz.Kpfw. VII" lName="Pz.Kpfw. VII" />
+    <tank ID="G136_Tiger_131" sName="Tiger 131" lName="Tiger 131" />
     <tank ID="G14_PzIII_A" sName="Pz. III E" lName="Pz.Kpfw. III Ausf. E" />
     <tank ID="G15_VK3601H" sName="VK 36.01 H" lName="VK 36.01 (H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
@@ -552,6 +556,8 @@
     <tank ID="J26_Type_89" sName="I-Go/Chi-Ro" lName="Type 89 I-Go/Chi-Ro" />
     <tank ID="J27_O_I_120" sName="O-Ho" lName="O-Ho" />
     <tank ID="J28_O_I_100" sName="O-Ni" lName="O-Ni" />
+    <tank ID="J29_Nameless" sName="Nameless" lName="Nameless" />
+    <tank ID="J30_Edelweiss" sName="Edelweiss" lName="Edelweiss" />
     <tank ID="JagdPanther" sName="JPanther" lName="Jagdpanther" />
     <tank ID="JagdPantherII" sName="JPanther II" lName="Jagdpanther II" />
     <tank ID="JagdPz_E100" sName="Jg.Pz. E 100" lName="Jagdpanzer E 100" />
@@ -735,7 +741,9 @@
     <tank ID="R133_KV_122" sName="KV-122" lName="KV-122" />
     <tank ID="R134_Object_252K" sName="Defender" lName="Object 252U Defender" />
     <tank ID="R134_Object_252U" sName="Obj. 252U" lName="Object 252U" />
+    <tank ID="R135_T_103" sName="T-103" lName="T-103" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
+    <tank ID="R143_T_29" sName="T-29" lName="T-29" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -1028,8 +1036,7 @@
     <item ID="92_stalingrad" Name="Stalingrad" />
     <item ID="95_lost_city" Name="Ghost Town" />
     <item ID="96_prohorovka_defense" Name="Fiery Salient" />
-    <item ID="h11_WGL_GrandFinal_2016" />
-    <item ID="h12_bday_EU_2015" />
+    <item ID="h13_bovtankfest_2016" />
     <item ID="03_campania" />
     <item ID="15_komarin" />
     <item ID="39_crimea" />
@@ -1057,7 +1064,6 @@
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
     <item ID="h10_summer_holiday_2016" />
-    <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="Himmelsdorf Arena" />
     <item ID="117_eiffelball" Name="Stade Eiffel" />
     <item ID="118_lostcityball" Name="Old Tankford" />
@@ -1220,7 +1226,7 @@
     <achv ID_Num="64" ID="kamikaze" Name="Kamikaze" />
     <achv ID_Num="66" ID="beasthunter" Name="Tankinmetsästäjä" />
     <achv ID_Num="67" ID="mousebane" Name="Hiirenloukku" />
-    <achv ID_Num="72" ID="evileye" Name="Partioitsija" />
+    <achv ID_Num="72" ID="evileye" Name="Partiomies" />
     <achv ID_Num="73" ID="medalRadleyWalters" Name="Radley-Waltersin mitali" />
     <achv ID_Num="74" ID="medalLafayettePool" Name="Poolin mitali" />
     <achv ID_Num="75" ID="medalBrunoPietro" Name="Brunon mitali" />
@@ -1950,7 +1956,7 @@
     <PM name="SPG-5: Jakaminen on välittämistä" short="StuG IV: SPG-5" desc="Vihollisen lamauttaminen ei ainoastaan auta joukkuettasi askeleen lähemmäs voittoa, mutta pitää myös huolen siitä, että saat ylimääräisiä kokemuspisteitä ja krediittejä, jos liittolaisesi vahingoittavat lamauttamiasi vihollisvaunuja. Älä unohda merkitä aluetta, johon tähtäät (oletusarvoisesti T-näppäin), jotta liittolaisesi ovat ajan tasalla ja osaavat keskittää tulensa alueelle." tMID="65" opID="1" mID="5" setID="5" ID="quest_1_5_5_main" secID="quest_1_5_5_add" minLvl="4" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Auta liittolaisiasi aiheuttamaan vähintään 600 pistettä vahinkoa vihollisvaunuihin, jotka ovat lamauttamiasi tai joiden telat ovat tuhoamiasi.</req>
+        <req>• Auta liittolaisiasi aiheuttamaan vähintään 600 pistettä vahinkoa vihollisvaunuihin lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Aiheuta vahinkoa vihollisvaunuihin vähintään 3 kertaa ampumalla tai törmäämällä.</req>
@@ -1959,7 +1965,7 @@
     <PM name="SPG-6: Jumalten vasara" short="StuG IV: SPG-6" desc="Telatykin ensisijainen tehtävä on tarjota tulitukea liittolaisvaunuille. Lamautuneet vihollisvaunut taistelevat tehottomasti, joten joukkuetoverisi arvostavat taatusti apuasi. Ole kuitenkin varovainen ampuessasi: huolimaton laukaus voi lamauttaa myös liittolaisvaunun. Omien ampumista ei suvaita!" tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Auta liittolaisiasi aiheuttamaan vahinkoa vähintään 2 vihollisvaunuun, jotka ovat lamauttamiasi tai joiden telat ovat tuhoamiasi.</req>
+        <req>• Auta liittolaisiasi aiheuttamaan vahinkoa vähintään 2 vihollisvaunuunlamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Voita taistelu.</req>
@@ -2040,7 +2046,7 @@
     <PM name="SPG-15: Sotajumalat" short="StuG IV: SPG-15" desc="Telatykki, joka pysyy mahdollisimman pitkään hengissä, on todellinen voimavara joukkueelleen. Jatka ampumista ammus toisensa jälkeen samalla, kun yrität välttää vihollistulen kohteeksi jäämistä. Ota aikasi ja mieti kahdesti ennen kuin \&quot;vedät liipaisimesta\&quot;, sillä \&quot;yksi laukaus-yksi osuma\&quot; on paras strategia vaunulle, joka kärsii pitkästä latausajasta." tMID="75" opID="1" mID="15" setID="5" ID="quest_1_5_15_main" secID="quest_1_5_15_add" minLvl="4" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Ole joukkueesi top-5 pelaajien joukossa ansaitun kokemuksen mukaan.\n• Auta liittolaisiasi aiheuttamaan vähintään 1000 pistettä vahinkoa vihollisvaunuihin, jotka ovat lamauttamiasi tai joiden telat ovat tuhoamiasi.</req>
+        <req>• Ole joukkueesi top-5 pelaajien joukossa ansaitun kokemuksen mukaan.\n• Auta liittolaisiasi aiheuttamaan vähintään 1000 pistettä vahinkoa vihollisvaunuihin lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="50000" slots="0" tokens="1" done="false">
         <req>• Selviydy taistelusta.</req>
@@ -2625,7 +2631,7 @@
     <PM name="SPG-5: Jakaminen on välittämistä" short="T28 Heavy Tank Concept: SPG-5" desc="Vihollisen lamauttaminen ei ainoastaan auta joukkuettasi askeleen lähemmäs voittoa, mutta pitää myös huolen siitä, että saat ylimääräisiä kokemuspisteitä ja krediittejä, jos liittolaisesi vahingoittavat lamauttamiasi vihollisvaunuja. Älä unohda merkitä aluetta, johon tähtäät (oletusarvoisesti T-näppäin), jotta liittolaisesi ovat ajan tasalla ja osaavat keskittää tulensa alueelle." tMID="140" opID="2" mID="5" setID="5" ID="quest_2_5_5_main" secID="quest_2_5_5_add" minLvl="5" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Auta liittolaisiasi aiheuttamaan vähintään 1 000 pistettä vahinkoa vihollisvaunuihin, lamauttamalla tai tuhoamalla niiden telat.</req>
+        <req>• Auta liittolaisiasi aiheuttamaan vähintään 1 000 pistettä vahinkoa vihollisvaunuihin lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="0" done="false">
         <req>• Aiheuta vahinkoa vihollisvaunuihin vähintään 5 kertaa ampumalla tai törmäämällä.</req>
@@ -2634,7 +2640,7 @@
     <PM name="SPG-6: Jumalten vasara" short="T28 Heavy Tank Concept: SPG-6" desc="Telatykin ensisijainen tehtävä on tarjota tulitukea liittolaisvaunuille. Lamautuneet vihollisvaunut taistelevat tehottomasti, joten joukkuetoverisi arvostavat taatusti apuasi. Ole kuitenkin varovainen ampuessasi: huolimaton laukaus voi lamauttaa myös liittolaisvaunun. Omien ampumista ei suvaita!" tMID="141" opID="2" mID="6" setID="5" ID="quest_2_5_6_main" secID="quest_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Auta liittolaisiasi vahingoittamaan vähintään 3 vihollisvaunua lamauttamalla tai tuhoamalla niiden telat.</req>
+        <req>• Auta liittolaisiasi vahingoittamaan vähintään 3 vihollisvaunua lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="0" done="false">
         <req>• Voita taistelu.</req>
@@ -2715,7 +2721,7 @@
     <PM name="SPG-15: Sotajumalat" short="T28 Heavy Tank Concept: SPG-15" desc="Telatykki, joka pysyy mahdollisimman pitkään hengissä, on todellinen voimavara joukkueelleen. Jatka ampumista ammus toisensa jälkeen samalla, kun yrität välttää vihollistulen kohteeksi jäämistä. Ota aikasi ja mieti kahdesti ennen kuin \&quot;vedät liipaisimesta\&quot;, sillä \&quot;yksi laukaus-yksi osuma\&quot; on paras strategia vaunulle, joka kärsii pitkästä latausajasta." tMID="150" opID="2" mID="15" setID="5" ID="quest_2_5_15_main" secID="quest_2_5_15_add" minLvl="5" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Ole joukkueesi top-3 pelaajien joukossa ansaitun kokemuksen mukaan.\n• Auta liittolaisiasi aiheuttamaan vähintään 1 500 pistettä vahinkoa vihollisvaunuihin, jotka ovat lamauttamiasi tai joiden telat ovat tuhoamiasi.</req>
+        <req>• Ole joukkueesi top-3 pelaajien joukossa ansaitun kokemuksen mukaan.\n• Auta liittolaisiasi aiheuttamaan vähintään 1 500 pistettä vahinkoa vihollisvaunuihin lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="100000" slots="0" tokens="1" done="false">
         <req>• Selviydy taistelusta.</req>
@@ -3300,7 +3306,7 @@
     <PM name="SPG-5: Jakaminen on välittämistä" short="T 55A: SPG-5" desc="Vihollisen lamauttaminen ei ainoastaan auta joukkuettasi askeleen lähemmäs voittoa, mutta pitää myös huolen siitä, että saat ylimääräisiä kokemuspisteitä ja krediittejä, jos liittolaisesi vahingoittavat lamauttamiasi vihollisvaunuja. Älä unohda merkitä aluetta, johon tähtäät (oletusarvoisesti T-näppäin), jotta liittolaisesi ovat ajan tasalla ja osaavat keskittää tulensa alueelle." tMID="215" opID="3" mID="5" setID="5" ID="quest_3_5_5_main" secID="quest_3_5_5_add" minLvl="6" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Auta liittolaisiasi aiheuttamaan vähintään 2 000 pistettä vahinkoa vihollisvaunuihin lamauttamalla tai tuhoamalla niiden telat.</req>
+        <req>• Auta liittolaisiasi aiheuttamaan vähintään 2 000 pistettä vahinkoa vihollisvaunuihin lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="0" done="false">
         <req>• Aiheuta vahinkoa vihollisvaunuihin vähintään 6 kertaa ampumalla tai törmäämällä.</req>
@@ -3309,7 +3315,7 @@
     <PM name="SPG-6: Jumalten vasara" short="T 55A: SPG-6" desc="Telatykin ensisijainen tehtävä on tarjota tulitukea liittolaisvaunuille. Lamautuneet vihollisvaunut taistelevat tehottomasti, joten joukkuetoverisi arvostavat taatusti apuasi. Ole kuitenkin varovainen ampuessasi: huolimaton laukaus voi lamauttaa myös liittolaisvaunun. Omien ampumista ei suvaita!" tMID="216" opID="3" mID="6" setID="5" ID="quest_3_5_6_main" secID="quest_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Auta liittolaisiasi vahingoittamaan vähintään 5 vihollisvaunua lamauttamalla tai tuhoamalla niiden telat.</req>
+        <req>• Auta liittolaisiasi vahingoittamaan vähintään 5 vihollisvaunua lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="0" done="false">
         <req>• Voita taistelu.\n• Selviydy taistelusta.</req>
@@ -3390,7 +3396,7 @@
     <PM name="SPG-15: Sotajumalat" short="T 55A: SPG-15" desc="Telatykki, joka pysyy mahdollisimman pitkään hengissä, on todellinen voimavara joukkueelleen. Jatka ampumista ammus toisensa jälkeen samalla, kun yrität välttää vihollistulen kohteeksi jäämistä. Ota aikasi ja mieti kahdesti ennen kuin \&quot;vedät liipaisimesta\&quot;, sillä \&quot;yksi laukaus-yksi osuma\&quot; on paras strategia vaunulle, joka kärsii pitkästä latausajasta." tMID="225" opID="3" mID="15" setID="5" ID="quest_3_5_15_main" secID="quest_3_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Päätä taistelu joukkueesi parhaana pelaajana ansaitun kokemuksen mukaan.\n• Auta liittolaisiasi aiheuttamaan vähintään 2 500 pistettä vahinkoa vihollisvaunuihin, jotka ovat lamauttamiasi tai joiden telat ovat tuhoamiasi.</req>
+        <req>• Päätä taistelu joukkueesi parhaana pelaajana ansaitun kokemuksen mukaan.\n• Auta liittolaisiasi aiheuttamaan vähintään 2 500 pistettä vahinkoa vihollisvaunuihin lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="250000" slots="0" tokens="1" done="false">
         <req>• Selviydy taistelusta.</req>
@@ -3975,7 +3981,7 @@
     <PM name="SPG-5: Jakaminen on välittämistä" short="Object 260: SPG-5" desc="Vihollisen lamauttaminen ei ainoastaan auta joukkuettasi askeleen lähemmäs voittoa, mutta pitää myös huolen siitä, että saat ylimääräisiä kokemuspisteitä ja krediittejä, jos liittolaisesi vahingoittavat lamauttamiasi vihollisvaunuja. Älä unohda merkitä aluetta, johon tähtäät (oletusarvoisesti T-näppäin), jotta liittolaisesi ovat ajan tasalla ja osaavat keskittää tulensa alueelle." tMID="290" opID="4" mID="5" setID="5" ID="quest_4_5_5_main" secID="quest_4_5_5_add" minLvl="6" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Auta liittolaisiasi aiheuttamaan vähintään 3 000 pistettä vahinkoa vihollisvaunuihin lamauttamalla tai tuhoamalla niiden telat.</req>
+        <req>• Auta liittolaisiasi aiheuttamaan vähintään 3 000 pistettä vahinkoa vihollisvaunuihin lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• Aiheuta vahinkoa vihollisvaunuihin vähintään 8 kertaa ampumalla tai törmäämällä.</req>
@@ -3984,7 +3990,7 @@
     <PM name="SPG-6: Jumalten vasara" short="Object 260: SPG-6" desc="Telatykin ensisijainen tehtävä on tarjota tulitukea liittolaisvaunuille. Lamautuneet vihollisvaunut taistelevat tehottomasti, joten joukkuetoverisi arvostavat taatusti apuasi. Ole kuitenkin varovainen ampuessasi: huolimaton laukaus voi lamauttaa myös liittolaisvaunun. Omien ampumista ei suvaita!" tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Auta liittolaisiasi vahingoittamaan vähintään 6 vihollisvaunua lamauttamalla tai tuhoamalla niiden telat.</req>
+        <req>• Auta liittolaisiasi vahingoittamaan vähintään 6 vihollisvaunua lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• Voita taistelu.\n• Selviydy taistelusta.</req>
@@ -4065,7 +4071,7 @@
     <PM name="SPG-15: Sotajumalat" short="Object 260: SPG-15" desc="Telatykki, joka pysyy mahdollisimman pitkään hengissä, on todellinen voimavara joukkueelleen. Jatka ampumista ammus toisensa jälkeen samalla, kun yrität välttää vihollistulen kohteeksi jäämistä. Ota aikasi ja mieti kahdesti ennen kuin \&quot;vedät liipaisimesta\&quot;, sillä \&quot;yksi laukaus-yksi osuma\&quot; on paras strategia vaunulle, joka kärsii pitkästä latausajasta." tMID="300" opID="4" mID="15" setID="5" ID="quest_4_5_15_main" secID="quest_4_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="Kauan odotettu vahvistus" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Päätä taistelu kummankin joukkueen parhaana pelaajana ansaitun kokemuksen mukaan.\n• Auta liittolaisiasi aiheuttamaan vähintään 3 500 pistettä vahinkoa vihollisvaunuihin, lamauttamalla ne tai tuhoamalla niiden telat.</req>
+        <req>• Ole taistelun päätteeksi kummankin joukkueen parhaana pelaajana ansaitun kokemuksen mukaan.\n• Auta liittolaisiasi aiheuttamaan vähintään 3 500 pistettä vahinkoa vihollisvaunuihin lamauttamalla niitä tai tuhoamalla niiden telat.</req>
       </Primary>
       <Secondary fXP="0" cr="500000" slots="0" tokens="1" done="false">
         <req>• Selviydy taistelusta.</req>
