--- a/data/lang/fr.xml
+++ b/data/lang/fr.xml
@@ -178,6 +178,8 @@
     <tank ID="Ch26_59_Patton" sName="59-Patton" lName="59-Patton" />
     <tank ID="Ch28_WZ_132A" sName="WZ-132A" lName="WZ-132A" />
     <tank ID="Ch29_Type_62C_prot" sName="WZ-132-1" lName="WZ-132-1" />
+    <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
+    <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -334,6 +336,8 @@
     <tank ID="G125_Spz_57_Rh" sName="Rhm. Pzw." lName="Rheinmetall Panzerwagen" />
     <tank ID="G126_HWK_12" sName="HWK 12" lName="HWK 12" />
     <tank ID="G13_VK3001H" sName="VK 30.01 H" lName="VK 30.01 (H)" />
+    <tank ID="G134_PzKpfw_VII" sName="Pz.Kpfw. VII" lName="Pz.Kpfw. VII" />
+    <tank ID="G136_Tiger_131" sName="Tiger 131" lName="Tiger 131" />
     <tank ID="G14_PzIII_A" sName="Pz. III E" lName="Pz.Kpfw. III Ausf. E" />
     <tank ID="G15_VK3601H" sName="VK 36.01 H" lName="VK 36.01 (H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
@@ -552,6 +556,8 @@
     <tank ID="J26_Type_89" sName="I-Go/Chi-Ro" lName="Type 89 I-Go/Chi-Ro" />
     <tank ID="J27_O_I_120" sName="O-Ho" lName="O-Ho" />
     <tank ID="J28_O_I_100" sName="O-Ni" lName="O-Ni" />
+    <tank ID="J29_Nameless" sName="Nameless" lName="Nameless" />
+    <tank ID="J30_Edelweiss" sName="Edelweiss" lName="Edelweiss" />
     <tank ID="JagdPanther" sName="JPanther" lName="Jagdpanther" />
     <tank ID="JagdPantherII" sName="JPanther II" lName="Jagdpanther II" />
     <tank ID="JagdPz_E100" sName="Jg.Pz. E 100" lName="Jagdpanzer E 100" />
@@ -735,7 +741,9 @@
     <tank ID="R133_KV_122" sName="KV-122" lName="KV-122" />
     <tank ID="R134_Object_252K" sName="Defender" lName="Object 252U Defender" />
     <tank ID="R134_Object_252U" sName="Obj. 252U" lName="Object 252U" />
+    <tank ID="R135_T_103" sName="T-103" lName="T-103" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
+    <tank ID="R143_T_29" sName="T-29" lName="T-29" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -1028,8 +1036,7 @@
     <item ID="92_stalingrad" Name="Stalingrad" />
     <item ID="95_lost_city" Name="Ville Fantôme" />
     <item ID="96_prohorovka_defense" Name="Percée fulgurante" />
-    <item ID="h11_WGL_GrandFinal_2016" />
-    <item ID="h12_bday_EU_2015" />
+    <item ID="h13_bovtankfest_2016" />
     <item ID="03_campania" />
     <item ID="15_komarin" />
     <item ID="39_crimea" />
@@ -1057,7 +1064,6 @@
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
     <item ID="h10_summer_holiday_2016" />
-    <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="Stade d'Himmelsdorf" />
     <item ID="117_eiffelball" Name="Stade Eiffel" />
     <item ID="118_lostcityball" Name="Old Tankford" />
@@ -1552,7 +1558,7 @@
       </Secondary>
     </PM>
     <PM name="Lourd-6 : Une cible lourde" short="StuG IV: Lourd-6 " desc="Un char lourd est une cible dangereuse hautement prioritaire. Détruisez les chars lourds pour aider votre équipe à prendre l'avantage dans la bataille." tMID="21" opID="1" mID="6" setID="2" ID="quest_1_2_6_main" secID="quest_1_2_6_add" minLvl="4" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="StuG IV">
-      <Hint>Il n'est pas facile de pénétrer le blindage frontal d'un char lourd ennemi. Si vous ne pouvez pas les contourner ou les attaquer sur l'arrière, essayez de toucher les plus points les plus fins du blindage frontal. Les points faibles incluent généralement les trappes, appareils d'observation, la coupole du chef de char et la plaque de glacis inférieure.</Hint>
+      <Hint>Il n'est pas facile de pénétrer le blindage frontal d'un char lourd ennemi. Si vous ne pouvez pas les contourner ou les attaquer sur l'arrière, essayez de toucher les parties les plus fines du blindage frontal. Les points faibles incluent généralement les trappes, appareils d'observation, la coupole du chef de char et la plaque de glacis inférieure.</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
         <req>• Détruire au moins 2 chars lourds ennemis.</req>
       </Primary>
@@ -2227,7 +2233,7 @@
       </Secondary>
     </PM>
     <PM name="Lourd-6 : Une cible lourde" short="T28 heavy tank concept: Lourd-6 " desc="Un char lourd est une cible dangereuse hautement prioritaire. Détruisez les chars lourds pour aider votre équipe à prendre l'avantage dans la bataille." tMID="96" opID="2" mID="6" setID="2" ID="quest_2_2_6_main" secID="quest_2_2_6_add" minLvl="5" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="T28 heavy tank concept">
-      <Hint>Il n'est pas facile de pénétrer le blindage frontal d'un char lourd ennemi. Si vous ne pouvez pas les contourner ou les attaquer sur l'arrière, essayez de toucher les plus points les plus fins du blindage frontal. Les points faibles incluent généralement les trappes, appareils d'observation, la coupole du chef de char et la plaque de glacis inférieure.</Hint>
+      <Hint>Il n'est pas facile de pénétrer le blindage frontal d'un char lourd ennemi. Si vous ne pouvez pas les contourner ou les attaquer sur l'arrière, essayez de toucher les parties les plus fines du blindage frontal. Les points faibles incluent généralement les trappes, appareils d'observation, la coupole du chef de char et la plaque de glacis inférieure.</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
         <req>• Détruire au moins 3 chars lourds ennemis.</req>
       </Primary>
@@ -2902,7 +2908,7 @@
       </Secondary>
     </PM>
     <PM name="Lourd-6 : Une cible lourde" short="T 55A: Lourd-6 " desc="Un char lourd est une cible dangereuse hautement prioritaire. Détruisez les chars lourds pour aider votre équipe à prendre l'avantage dans la bataille." tMID="171" opID="3" mID="6" setID="2" ID="quest_3_2_6_main" secID="quest_3_2_6_add" minLvl="6" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="T 55A">
-      <Hint>Il n'est pas facile de pénétrer le blindage frontal d'un char lourd ennemi. Si vous ne pouvez pas les contourner ou les attaquer sur l'arrière, essayez de toucher les plus points les plus fins du blindage frontal. Les points faibles incluent généralement les trappes, appareils d'observation, la coupole du chef de char et la plaque de glacis inférieure.</Hint>
+      <Hint>Il n'est pas facile de pénétrer le blindage frontal d'un char lourd ennemi. Si vous ne pouvez pas les contourner ou les attaquer sur l'arrière, essayez de toucher les parties les plus fines du blindage frontal. Les points faibles incluent généralement les trappes, appareils d'observation, la coupole du chef de char et la plaque de glacis inférieure.</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
         <req>• Détruire au moins 2 chars lourds ennemis d'un rang supérieur à celui de votre véhicule.</req>
       </Primary>
@@ -3577,7 +3583,7 @@
       </Secondary>
     </PM>
     <PM name="Lourd-6 : Une cible lourde" short="Object 260: Lourd-6 " desc="Un char lourd est une cible dangereuse hautement prioritaire. Détruisez les chars lourds pour aider votre équipe à prendre l'avantage dans la bataille." tMID="246" opID="4" mID="6" setID="2" ID="quest_4_2_6_main" secID="quest_4_2_6_add" minLvl="6" maxLvl="10" campID="1" camp="Les renforts tant attendus" reward="Object 260">
-      <Hint>Il n'est pas facile de pénétrer le blindage frontal d'un char lourd ennemi. Si vous ne pouvez pas les contourner ou les attaquer sur l'arrière, essayez de toucher les plus points les plus fins du blindage frontal. Les points faibles incluent généralement les trappes, appareils d'observation, la coupole du chef de char et la plaque de glacis inférieure.</Hint>
+      <Hint>Il n'est pas facile de pénétrer le blindage frontal d'un char lourd ennemi. Si vous ne pouvez pas les contourner ou les attaquer sur l'arrière, essayez de toucher les parties les plus fines du blindage frontal. Les points faibles incluent généralement les trappes, appareils d'observation, la coupole du chef de char et la plaque de glacis inférieure.</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
         <req>• Détruire au moins 2 chars lourds ennemis de 2 rangs supérieurs à celui de votre véhicule.</req>
       </Primary>
