--- a/data/lang/lv.xml
+++ b/data/lang/lv.xml
@@ -178,6 +178,8 @@
     <tank ID="Ch26_59_Patton" sName="59-Patton" lName="59-Patton" />
     <tank ID="Ch28_WZ_132A" sName="WZ-132A" lName="WZ-132A" />
     <tank ID="Ch29_Type_62C_prot" sName="WZ-132-1" lName="WZ-132-1" />
+    <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
+    <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -334,6 +336,8 @@
     <tank ID="G125_Spz_57_Rh" sName="Rhm. Pzw." lName="Rheinmetall Panzerwagen" />
     <tank ID="G126_HWK_12" sName="HWK 12" lName="HWK 12" />
     <tank ID="G13_VK3001H" sName="VK 30.01 H" lName="VK 30.01 (H)" />
+    <tank ID="G134_PzKpfw_VII" sName="Pz.Kpfw. VII" lName="Pz.Kpfw. VII" />
+    <tank ID="G136_Tiger_131" sName="Tiger 131" lName="Tiger 131" />
     <tank ID="G14_PzIII_A" sName="Pz. III E" lName="Pz.Kpfw. III Ausf. E" />
     <tank ID="G15_VK3601H" sName="VK 36.01 H" lName="VK 36.01 (H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
@@ -552,6 +556,8 @@
     <tank ID="J26_Type_89" sName="I-Go/Chi-Ro" lName="Type 89 I-Go/Chi-Ro" />
     <tank ID="J27_O_I_120" sName="O-Ho" lName="O-Ho" />
     <tank ID="J28_O_I_100" sName="O-Ni" lName="O-Ni" />
+    <tank ID="J29_Nameless" sName="Nameless" lName="Nameless" />
+    <tank ID="J30_Edelweiss" sName="Edelweiss" lName="Edelweiss" />
     <tank ID="JagdPanther" sName="JPanther" lName="Jagdpanther" />
     <tank ID="JagdPantherII" sName="JPanther II" lName="Jagdpanther II" />
     <tank ID="JagdPz_E100" sName="Jg.Pz. E 100" lName="Jagdpanzer E 100" />
@@ -735,7 +741,9 @@
     <tank ID="R133_KV_122" sName="KV-122" lName="KV-122" />
     <tank ID="R134_Object_252K" sName="Defender" lName="Object 252U Aizstāvis" />
     <tank ID="R134_Object_252U" sName="Object 252U" lName="Object 252U" />
+    <tank ID="R135_T_103" sName="T-103" lName="T-103" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
+    <tank ID="R143_T_29" sName="T-29" lName="T-29" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -1028,8 +1036,7 @@
     <item ID="92_stalingrad" Name="Staļingrada" />
     <item ID="95_lost_city" Name="Pamestā pilsēta" />
     <item ID="96_prohorovka_defense" Name="Ugunīgais Loks" />
-    <item ID="h11_WGL_GrandFinal_2016" />
-    <item ID="h12_bday_EU_2015" />
+    <item ID="h13_bovtankfest_2016" />
     <item ID="03_campania" />
     <item ID="15_komarin" />
     <item ID="39_crimea" />
@@ -1057,7 +1064,6 @@
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
     <item ID="h10_summer_holiday_2016" />
-    <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="Himmelsdorfas arēna" />
     <item ID="117_eiffelball" Name="Eifeļa pakāje" />
     <item ID="118_lostcityball" Name="Pamestais stadions" />
@@ -1950,7 +1956,7 @@
     <PM name="Artilērija-5: Atbalsts no horizonta" short="StuG IV: Artilērija-5" desc="Pretinieku bruņutehnikas apdullināšana ne tikai pavirza jūsu komandu par soli tuvāk uzvarai, bet sniegs jums arī papildus kredītus un pieredzi, ja sabiedrotie izdarīs bojājumus pa jūsu apdullinātajiem. Neaizmirstiet iezīmēt reģionu, kurā tēmējat (pēc noklusējuma taustiņš T), lai pievērstu sabiedroto uzmanību." tMID="65" opID="1" mID="5" setID="5" ID="quest_1_5_5_main" secID="quest_1_5_5_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ļaujiet sabiedrotajiem izdarīt bojājumus vismaz 600 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
+        <req>• Radiet iespēju sabiedrotajiem izdarīt bojājumus vismaz 600 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Vismaz 3 reizes izdariet bojājumus pretinieku bruņutehnikai ar šāvieniem vai taranēšanu.</req>
@@ -1959,7 +1965,7 @@
     <PM name="Artilērija-6: Tora āmurs" short="StuG IV: Artilērija-6" desc="Primārais artilērijas uzdevums ir sniegt atbalstu sabiedrotajiem. Apdullināti pretinieki ir vāji cīkstoņi, tāpēc jūsu komandas biedri noteikti novērtēs jūsu atbalstu. Tomēr esiet uzmanīgi ar šaušanu. Paviršs šāviens var apdullināt sabiedroto bruņutehniku. Nepieļaujiet to!" tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ļaujiet sabiedrotajiem izdarīt bojājumus pa vismaz 2 jūsu apturētām vai apdullinātām pretinieku bruņutehnikas vienībām.</req>
+        <req>• Radiet iespēju sabiedrotajiem izdarīt bojājumus pa vismaz 2 jūsu apturētām vai apdullinātām pretinieku bruņutehnikas vienībām.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Uzvariet kaujā.</req>
@@ -2040,7 +2046,7 @@
     <PM name="Artilērija-15: Kara dievi" short="StuG IV: Artilērija-15" desc="Artilērija, kas izdzīvo ilgu laiku, ir viens no komandas uzvaras stūrakmeņiem. Raidiet vienu lādiņu pēc otra, izbēgot no pretinieku uguns. Apdomājiet divreiz pirms nospiest gaili, jo labākā pieeja bruņutehnikai ar ilgu pārlādēšanas laiku ir „viens šāviens, viens kritušais”." tMID="75" opID="1" mID="15" setID="5" ID="quest_1_5_15_main" secID="quest_1_5_15_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Iekļūstiet starp 5 labākajiem savā komandā pēc nopelnītās pieredzes un izdarīto bojājumu apjoma.\n• Ļaujiet sabiedrotajiem izdarīt bojājumus vismaz 1000 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
+        <req>• Iekļūstiet starp 5 labākajiem savā komandā pēc nopelnītās pieredzes.\n• Ļaujiet sabiedrotajiem izdarīt bojājumus vismaz 1000 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
       </Primary>
       <Secondary fXP="0" cr="50000" slots="0" tokens="1" done="false">
         <req>• Izdzīvojiet kaujā.</req>
@@ -2625,7 +2631,7 @@
     <PM name="Artilērija-5: Atbalsts no horizonta" short="Т28 Heavy Tank Concept: Artilērija-5" desc="Pretinieku bruņutehnikas apdullināšana ne tikai pavirza jūsu komandu par soli tuvāk uzvarai, bet sniegs jums arī papildus kredītus un pieredzi, ja sabiedrotie izdarīs bojājumus pa jūsu apdullinātajiem. Neaizmirstiet iezīmēt reģionu, kurā tēmējat (pēc noklusējuma taustiņš T), lai pievērstu sabiedroto uzmanību." tMID="140" opID="2" mID="5" setID="5" ID="quest_2_5_5_main" secID="quest_2_5_5_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="Т28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ļaujiet sabiedrotajiem izdarīt bojājumus vismaz 1000 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
+        <req>• Radiet iespēju sabiedrotajiem izdarīt bojājumus vismaz 1000 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="0" done="false">
         <req>• Vismaz 5 reizes izdariet bojājumus pretinieku bruņutehnikai ar šāvieniem vai taranēšanu.</req>
@@ -2634,7 +2640,7 @@
     <PM name="Artilērija-6: Tora āmurs" short="Т28 Heavy Tank Concept: Artilērija-6" desc="Primārais artilērijas uzdevums ir sniegt atbalstu sabiedrotajiem. Apdullināti pretinieki ir vāji cīkstoņi, tāpēc jūsu komandas biedri noteikti novērtēs jūsu atbalstu. Tomēr esiet uzmanīgi ar šaušanu. Paviršs šāviens var apdullināt sabiedroto bruņutehniku. Nepieļaujiet to!" tMID="141" opID="2" mID="6" setID="5" ID="quest_2_5_6_main" secID="quest_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="Т28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ļaujiet sabiedrotajiem izdarīt bojājumus pa vismaz 3 jūsu apturētām vai apdullinātām pretinieku bruņutehnikas vienībām.</req>
+        <req>• Radiet iespēju sabiedrotajiem izdarīt bojājumus pa vismaz 3 jūsu apturētām vai apdullinātām pretinieku bruņutehnikas vienībām.</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="0" done="false">
         <req>• Uzvariet kaujā.</req>
@@ -2715,7 +2721,7 @@
     <PM name="Artilērija-15: Kara dievi" short="Т28 Heavy Tank Concept: Artilērija-15" desc="Artilērija, kas izdzīvo ilgu laiku, ir viens no komandas uzvaras stūrakmeņiem. Raidiet vienu lādiņu pēc otra, izbēgot no pretinieku uguns. Apdomājiet divreiz pirms nospiest gaili, jo labākā pieeja bruņutehnikai ar ilgu pārlādēšanas laiku ir „viens šāviens, viens kritušais”." tMID="150" opID="2" mID="15" setID="5" ID="quest_2_5_15_main" secID="quest_2_5_15_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="Т28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Iekļūstiet starp 3 labākajiem savā komandā pēc nopelnītās pieredzes un izdarīto bojājumu apjoma.\n• Ļaujiet sabiedrotajiem izdarīt bojājumus vismaz 1500 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
+        <req>• Iekļūstiet starp 3 labākajiem savā komandā pēc nopelnītās pieredzes.\n• Radiet iespēju sabiedrotajiem izdarīt bojājumus vismaz 1500 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
       </Primary>
       <Secondary fXP="0" cr="100000" slots="0" tokens="1" done="false">
         <req>• Izdzīvojiet kaujā.</req>
@@ -3300,7 +3306,7 @@
     <PM name="Artilērija-5: Atbalsts no horizonta" short="T 55A: Artilērija-5" desc="Pretinieku bruņutehnikas apdullināšana ne tikai pavirza jūsu komandu par soli tuvāk uzvarai, bet sniegs jums arī papildus kredītus un pieredzi, ja sabiedrotie izdarīs bojājumus pa jūsu apdullinātajiem. Neaizmirstiet iezīmēt reģionu, kurā tēmējat (pēc noklusējuma taustiņš T), lai pievērstu sabiedroto uzmanību." tMID="215" opID="3" mID="5" setID="5" ID="quest_3_5_5_main" secID="quest_3_5_5_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ļaujiet sabiedrotajiem izdarīt bojājumus vismaz 2000 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
+        <req>• Radiet iespēju sabiedrotajiem izdarīt bojājumus vismaz 2000 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="0" done="false">
         <req>• Vismaz 6 reizes izdariet bojājumus pretinieku bruņutehnikai ar šāvieniem vai taranēšanu.</req>
@@ -3309,7 +3315,7 @@
     <PM name="Artilērija-6: Tora āmurs" short="T 55A: Artilērija-6" desc="Primārais artilērijas uzdevums ir sniegt atbalstu sabiedrotajiem. Apdullināti pretinieki ir vāji cīkstoņi, tāpēc jūsu komandas biedri noteikti novērtēs jūsu atbalstu. Tomēr esiet uzmanīgi ar šaušanu. Paviršs šāviens var apdullināt sabiedroto bruņutehniku. Nepieļaujiet to!" tMID="216" opID="3" mID="6" setID="5" ID="quest_3_5_6_main" secID="quest_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ļaujiet sabiedrotajiem izdarīt bojājumus pa vismaz 5 jūsu apturētām vai apdullinātām pretinieku bruņutehnikas vienībām.</req>
+        <req>• Radiet iespēju sabiedrotajiem izdarīt bojājumus pa vismaz 5 jūsu apturētām vai apdullinātām pretinieku bruņutehnikas vienībām.</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="0" done="false">
         <req>• Uzvariet kaujā.\n• Izdzīvojiet kaujā.</req>
@@ -3390,7 +3396,7 @@
     <PM name="Artilērija-15: Kara dievi" short="T 55A: Artilērija-15" desc="Artilērija, kas izdzīvo ilgu laiku, ir viens no komandas uzvaras stūrakmeņiem. Raidiet vienu lādiņu pēc otra, izbēgot no pretinieku uguns. Apdomājiet divreiz pirms nospiest gaili, jo labākā pieeja bruņutehnikai ar ilgu pārlādēšanas laiku ir „viens šāviens, viens kritušais”." tMID="225" opID="3" mID="15" setID="5" ID="quest_3_5_15_main" secID="quest_3_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Ieņemiet pirmo vietu savā komandā pēc nopelnītās pieredzes.\n• Ļaujiet sabiedrotajiem izdarīt bojājumus vismaz 2500 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
+        <req>• Ieņemiet pirmo vietu savā komandā pēc nopelnītās pieredzes.\n• Radiet iespēju sabiedrotajiem izdarīt bojājumus vismaz 2500 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
       </Primary>
       <Secondary fXP="0" cr="250000" slots="0" tokens="1" done="false">
         <req>• Izdzīvojiet kaujā.</req>
@@ -3975,7 +3981,7 @@
     <PM name="Artilērija-5: Atbalsts no horizonta" short="Object 260: Artilērija-5" desc="Pretinieku bruņutehnikas apdullināšana ne tikai pavirza jūsu komandu par soli tuvāk uzvarai, bet sniegs jums arī papildus kredītus un pieredzi, ja sabiedrotie izdarīs bojājumus pa jūsu apdullinātajiem. Neaizmirstiet iezīmēt reģionu, kurā tēmējat (pēc noklusējuma taustiņš T), lai pievērstu sabiedroto uzmanību." tMID="290" opID="4" mID="5" setID="5" ID="quest_4_5_5_main" secID="quest_4_5_5_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ļaujiet sabiedrotajiem izdarīt bojājumus vismaz 3000 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
+        <req>• Radiet iespēju sabiedrotajiem izdarīt bojājumus vismaz 3000 punktu apmērā pa jūsu apturētu vai apdullinātu pretinieku bruņutehniku.</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• Vismaz 8 reizes ar šāvieniem vai taranēšanu izdariet bojājumus pretinieku bruņutehnikai.</req>
@@ -3984,7 +3990,7 @@
     <PM name="Artilērija-6: Tora āmurs" short="Object 260: Artilērija-6" desc="Primārais artilērijas uzdevums ir sniegt atbalstu sabiedrotajiem. Apdullināti pretinieki ir vāji cīkstoņi, tāpēc jūsu komandas biedri noteikti novērtēs jūsu atbalstu. Tomēr esiet uzmanīgi ar šaušanu. Paviršs šāviens var apdullināt sabiedroto bruņutehniku. Nepieļaujiet to!" tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgi gaidītie papildspēki" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ļaujiet sabiedrotajiem izdarīt bojājumus pa vismaz 6 jūsu apturētām vai apdullinātām pretinieku bruņutehnikas vienībām.</req>
+        <req>• Radiet iespēju sabiedrotajiem izdarīt bojājumus pa vismaz 6 jūsu apturētām vai apdullinātām pretinieku bruņutehnikas vienībām.</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• Uzvariet kaujā.\n• Izdzīvojiet kaujā.</req>
