--- a/data/lang/nl.xml
+++ b/data/lang/nl.xml
@@ -178,6 +178,8 @@
     <tank ID="Ch26_59_Patton" sName="59-Patton" lName="59-Patton" />
     <tank ID="Ch28_WZ_132A" sName="WZ-132A" lName="WZ-132A" />
     <tank ID="Ch29_Type_62C_prot" sName="WZ-132-1" lName="WZ-132-1" />
+    <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
+    <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -334,6 +336,8 @@
     <tank ID="G125_Spz_57_Rh" sName="Rhm. Pzw." lName="Rheinmetall Panzerwagen" />
     <tank ID="G126_HWK_12" sName="HWK 12" lName="HWK 12" />
     <tank ID="G13_VK3001H" sName="VK 30.01 H" lName="VK 30.01 (H)" />
+    <tank ID="G134_PzKpfw_VII" sName="Pz.Kpfw. VII" lName="Pz.Kpfw. VII" />
+    <tank ID="G136_Tiger_131" sName="Tiger 131" lName="Tiger 131" />
     <tank ID="G14_PzIII_A" sName="Pz. III E" lName="Pz.Kpfw. III Ausf. E" />
     <tank ID="G15_VK3601H" sName="VK 36.01 H" lName="VK 36.01 (H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
@@ -552,6 +556,8 @@
     <tank ID="J26_Type_89" sName="I-Go/Chi-Ro" lName="Type 89 I-Go/Chi-Ro" />
     <tank ID="J27_O_I_120" sName="O-Ho" lName="O-Ho" />
     <tank ID="J28_O_I_100" sName="O-Ni" lName="O-Ni" />
+    <tank ID="J29_Nameless" sName="Naamloos" lName="Naamloos" />
+    <tank ID="J30_Edelweiss" sName="Edelweiss" lName="Edelweiss" />
     <tank ID="JagdPanther" sName="JPanther" lName="Jagdpanther" />
     <tank ID="JagdPantherII" sName="JPanther II" lName="Jagdpanther II" />
     <tank ID="JagdPz_E100" sName="Jg.Pz. E 100" lName="Jagdpanzer E 100" />
@@ -735,7 +741,9 @@
     <tank ID="R133_KV_122" sName="KV-122" lName="KV-122" />
     <tank ID="R134_Object_252K" sName="Defender" lName="Object 252U Defender" />
     <tank ID="R134_Object_252U" sName="Obj. 252U" lName="Object 252U" />
+    <tank ID="R135_T_103" sName="T-103" lName="T-103" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
+    <tank ID="R143_T_29" sName="T-29" lName="T-29" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -1028,8 +1036,7 @@
     <item ID="92_stalingrad" Name="Stalingrad" />
     <item ID="95_lost_city" Name="Spookstad" />
     <item ID="96_prohorovka_defense" Name="Vurig Saillant" />
-    <item ID="h11_WGL_GrandFinal_2016" />
-    <item ID="h12_bday_EU_2015" />
+    <item ID="h13_bovtankfest_2016" />
     <item ID="03_campania" />
     <item ID="15_komarin" />
     <item ID="39_crimea" />
@@ -1057,7 +1064,6 @@
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
     <item ID="h10_summer_holiday_2016" />
-    <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="Himmelsdorf Arena" />
     <item ID="117_eiffelball" Name="Stade Eiffel" />
     <item ID="118_lostcityball" Name="Old Tankford" />
@@ -1254,7 +1260,7 @@
     <achv ID_Num="143" ID="medalBrothersInArms" Name="Wapenbroeders" />
     <achv ID_Num="144" ID="medalCrucialContribution" Name="Cruciale bijdrage" />
     <achv ID_Num="145" ID="medalDeLanglade" Name="De Langlade's medaille" />
-    <achv ID_Num="146" ID="medalTamadaYoshio" Name="Tamada Yoshio's medaille" />
+    <achv ID_Num="146" ID="medalTamadaYoshio" Name="Yoshio Tamada's medaille" />
     <achv ID_Num="147" ID="bombardier" Name="Artillerist" />
     <achv ID_Num="148" ID="huntsman" Name="Naydins medaille" />
     <achv ID_Num="150" ID="sturdy" Name="Spartaan" />
@@ -2715,7 +2721,7 @@
     <PM name="SPG-15: Oorlogsgoden" short="Т28 Heavy Tank Concept: SPG-15" desc="Een artillerie die zo lang mogelijk overleeft, is een ware aanwinst voor het team. Ga door met het afvuren van de ene granaat na de andere, terwijl je probeert te voorkomen dat je door de vijand wordt beschoten. Neem je tijd en denk twee keer na voordat je \&quot;de trekker overhaalt\&quot;, omdat \&quot;één schot-één treffer\&quot; de beste strategie is voor een voertuig met een lange herlaadtijd." tMID="150" opID="2" mID="15" setID="5" ID="quest_2_5_15_main" secID="quest_2_5_15_add" minLvl="5" maxLvl="10" campID="1" camp="De langverwachte versterking" reward="Т28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Wees bij de top 3 spelers van beide teams met verdiende ervaring.\n• Geef bondgenoten de gelegenheid om minstens 1.500 schade aan vijandelijke voertuigen te veroorzaken door hen te verdoven of immobiliseren.</req>
+        <req>• Wees bij de top 3 spelers van jouw team met verdiende ervaring.\n• Geef bondgenoten de gelegenheid om minstens 1.500 schade aan vijandelijke voertuigen te veroorzaken door hen te verdoven of immobiliseren.</req>
       </Primary>
       <Secondary fXP="0" cr="100000" slots="0" tokens="1" done="false">
         <req>• Overleef het gevecht.</req>
