--- a/data/lang/pt.xml
+++ b/data/lang/pt.xml
@@ -178,6 +178,8 @@
     <tank ID="Ch26_59_Patton" sName="59-Patton" lName="59-Patton" />
     <tank ID="Ch28_WZ_132A" sName="WZ-132A" lName="WZ-132A" />
     <tank ID="Ch29_Type_62C_prot" sName="WZ-132-1" lName="WZ-132-1" />
+    <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
+    <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -334,6 +336,8 @@
     <tank ID="G125_Spz_57_Rh" sName="Rhm. Pzw." lName="Rheinmetall Panzerwagen" />
     <tank ID="G126_HWK_12" sName="HWK 12" lName="HWK 12" />
     <tank ID="G13_VK3001H" sName="VK 30.01 H" lName="VK 30.01 (H)" />
+    <tank ID="G134_PzKpfw_VII" sName="Pz.Kpfw. VII" lName="Pz.Kpfw. VII" />
+    <tank ID="G136_Tiger_131" sName="Tiger 131" lName="Tiger 131" />
     <tank ID="G14_PzIII_A" sName="Pz. III E" lName="Pz.Kpfw. III Ausf. E" />
     <tank ID="G15_VK3601H" sName="VK 36.01 H" lName="VK 36.01 (H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
@@ -552,6 +556,8 @@
     <tank ID="J26_Type_89" sName="I-Go/Chi-Ro" lName="Type 89 I-Go/Chi-Ro" />
     <tank ID="J27_O_I_120" sName="O-Ho" lName="O-Ho" />
     <tank ID="J28_O_I_100" sName="O-Ni" lName="O-Ni" />
+    <tank ID="J29_Nameless" sName="Nameless" lName="Nameless" />
+    <tank ID="J30_Edelweiss" sName="Edelweiss" lName="Edelweiss" />
     <tank ID="JagdPanther" sName="JPanther" lName="Jagdpanther" />
     <tank ID="JagdPantherII" sName="JPanther II" lName="Jagdpanther II" />
     <tank ID="JagdPz_E100" sName="Jg.Pz. E 100" lName="Jagdpanzer E 100" />
@@ -735,7 +741,9 @@
     <tank ID="R133_KV_122" sName="KV-122" lName="KV-122" />
     <tank ID="R134_Object_252K" sName="Defender" lName="Object 252U Defender" />
     <tank ID="R134_Object_252U" sName="Obj. 252U" lName="Object 252U" />
+    <tank ID="R135_T_103" sName="T-103" lName="T-103" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
+    <tank ID="R143_T_29" sName="T-29" lName="T-29" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -1028,8 +1036,7 @@
     <item ID="92_stalingrad" Name="Stalingrad" />
     <item ID="95_lost_city" Name="Ghost Town" />
     <item ID="96_prohorovka_defense" Name="Arco de Fogo" />
-    <item ID="h11_WGL_GrandFinal_2016" />
-    <item ID="h12_bday_EU_2015" />
+    <item ID="h13_bovtankfest_2016" />
     <item ID="03_campania" />
     <item ID="15_komarin" />
     <item ID="39_crimea" />
@@ -1057,7 +1064,6 @@
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
     <item ID="h10_summer_holiday_2016" />
-    <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="Arena Himmelsdorf" />
     <item ID="117_eiffelball" Name="Estádio Eiffel" />
     <item ID="118_lostcityball" Name="Old Tankford" />
@@ -2715,7 +2721,7 @@
     <PM name="AAP-15: Deus da Guerra" short="T28 heavy tank concept: AAP-15" desc="Uma AAP que sobreviva durante o maior tempo possível é um verdadeiro trunfo para a equipa. Continue a disparar um tiro atrás do outro enquanto tenta não ser apanhado pelo fogo inimigo. Leve o seu tempo e pense duas vezes antes de \&quot;puxar o gatilho\&quot;, uma vez que \&quot;um tiro uma morte\&quot; é a melhor estratégia para um veículo com um longo tempo de recarregamento." tMID="150" opID="2" mID="15" setID="5" ID="quest_2_5_15_main" secID="quest_2_5_15_add" minLvl="5" maxLvl="10" campID="1" camp="O Muito Antecipado Backup" reward="T28 heavy tank concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Ficar entre os 3 melhores jogadores de ambas as equipas por experiência recebida.\n• Permitir aos seus aliados causarem pelo menos 1.500 de dano a veículos inimigos ao atordoá-los ou imobilizá-los.</req>
+        <req>• Ficar entre os 3 melhores jogadores da sua equipa por experiência recebida.\n• Permitir aos seus aliados causarem pelo menos 1.500 de dano a veículos inimigos ao atordoá-los ou imobilizá-los.</req>
       </Primary>
       <Secondary fXP="0" cr="100000" slots="0" tokens="1" done="false">
         <req>• Sobreviva à batalha.</req>
@@ -3390,7 +3396,7 @@
     <PM name="AAP-15: Deus da Guerra" short="T 55A: AAP-15" desc="Uma AAP que sobreviva durante o maior tempo possível é um verdadeiro trunfo para a equipa. Continue a disparar um tiro atrás do outro enquanto tenta não ser apanhado pelo fogo inimigo. Leve o seu tempo e pense duas vezes antes de \&quot;puxar o gatilho\&quot;, uma vez que \&quot;um tiro uma morte\&quot; é a melhor estratégia para um veículo com um longo tempo de recarregamento." tMID="225" opID="3" mID="15" setID="5" ID="quest_3_5_15_main" secID="quest_3_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="O Muito Antecipado Backup" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Termine a batalha como o melhor jogador de ambas as equipas por experiência recebida.\n• Permitir aos seus aliados causarem pelo menos 2.500 de dano a veículos inimigos ao atordoá-los ou imobilizá-los.</req>
+        <req>• Terminar a batalha como o melhor jogador da sua equipa por experiência recebida.\n• Permitir aos seus aliados causarem pelo menos 2.500 de dano a veículos inimigos ao atordoá-los ou imobilizá-los.</req>
       </Primary>
       <Secondary fXP="0" cr="250000" slots="0" tokens="1" done="false">
         <req>• Sobreviva à batalha.</req>
@@ -3984,7 +3990,7 @@
     <PM name="AAP-6: Martelo dos Deuses" short="Object 260: AAP-6" desc="O objetivo principal das AAPs é fornecer suporte de fogo aos veículos aliados. Veículos inimigos atordoados são lutadores fracos, então os seus companheiros de equipa irão certamente apreciar a sua ajuda. No entanto, seja cauteloso quando disparar: um tiro descuidado também pode atordoar um veículo aliado. O fogo aliado não será tolerado!" tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="O Muito Antecipado Backup" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Permitir aos seus aliados danificarem pelo menos 6 veículos inimigos ao atordoá-los ou imobilizá-los.</req>
+        <req>• Permitir aos seus aliados causarem dano em pelo menos 6 veículos inimigos ao atordoá-los ou imobilizá-los.</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• Ganhe a batalha.\n• Sobreviva à batalha.</req>
@@ -4065,7 +4071,7 @@
     <PM name="AAP-15: Deus da Guerra" short="Object 260: AAP-15" desc="Uma AAP que sobreviva durante o maior tempo possível é um verdadeiro trunfo para a equipa. Continue a disparar um tiro atrás do outro enquanto tenta não ser apanhado pelo fogo inimigo. Leve o seu tempo e pense duas vezes antes de \&quot;puxar o gatilho\&quot;, uma vez que \&quot;um tiro uma morte\&quot; é a melhor estratégia para um veículo com um longo tempo de recarregamento." tMID="300" opID="4" mID="15" setID="5" ID="quest_4_5_15_main" secID="quest_4_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="O Muito Antecipado Backup" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Termine a batalha como o melhor jogador de ambas as equipas por experiência recebida.\n• Permitir aos seus aliados causarem pelo menos 3.500 de dano a veículos inimigos ao atordoá-los ou imobilizá-los.</req>
+        <req>• Termine a batalha como o melhor jogador de ambas as equipas por experiência recebida.\n• Permitir aos seus aliados causarem pelo menos 3.500 de dano a veículos inimigos ao atordoá-los ou imobilizá-los.</req>
       </Primary>
       <Secondary fXP="0" cr="500000" slots="0" tokens="1" done="false">
         <req>• Sobreviva à batalha.</req>
