--- a/data/lang/ro.xml
+++ b/data/lang/ro.xml
@@ -178,6 +178,8 @@
     <tank ID="Ch26_59_Patton" sName="59-Patton" lName="59-Patton" />
     <tank ID="Ch28_WZ_132A" sName="WZ-132A" lName="WZ-132A" />
     <tank ID="Ch29_Type_62C_prot" sName="WZ-132-1" lName="WZ-132-1" />
+    <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
+    <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -334,6 +336,8 @@
     <tank ID="G125_Spz_57_Rh" sName="Rhm. Pzw." lName="Rheinmetall Panzerwagen" />
     <tank ID="G126_HWK_12" sName="HWK 12" lName="HWK 12" />
     <tank ID="G13_VK3001H" sName="VK 30.01 H" lName="VK 30.01 (H)" />
+    <tank ID="G134_PzKpfw_VII" sName="Pz.Kpfw. VII" lName="Pz.Kpfw. VII" />
+    <tank ID="G136_Tiger_131" sName="Tiger 131" lName="Tiger 131" />
     <tank ID="G14_PzIII_A" sName="Pz. III E" lName="Pz.Kpfw. III Ausf. E" />
     <tank ID="G15_VK3601H" sName="VK 36.01 H" lName="VK 36.01 (H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
@@ -552,6 +556,8 @@
     <tank ID="J26_Type_89" sName="I-Go/Chi-Ro" lName="Type 89 I-Go/Chi-Ro" />
     <tank ID="J27_O_I_120" sName="O-Ho" lName="O-Ho" />
     <tank ID="J28_O_I_100" sName="O-Ni" lName="O-Ni" />
+    <tank ID="J29_Nameless" sName="Nameless" lName="Nameless" />
+    <tank ID="J30_Edelweiss" sName="Edelweiss" lName="Edelweiss" />
     <tank ID="JagdPanther" sName="JPanther" lName="Jagdpanther" />
     <tank ID="JagdPantherII" sName="JPanther II" lName="Jagdpanther II" />
     <tank ID="JagdPz_E100" sName="Jg.Pz. E 100" lName="Jagdpanzer E 100" />
@@ -735,7 +741,9 @@
     <tank ID="R133_KV_122" sName="KV-122" lName="KV-122" />
     <tank ID="R134_Object_252K" sName="Defender" lName="Object 252U Defender" />
     <tank ID="R134_Object_252U" sName="Obj. 252U" lName="Object 252U" />
+    <tank ID="R135_T_103" sName="T-103" lName="T-103" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
+    <tank ID="R143_T_29" sName="T-29" lName="T-29" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -981,7 +989,7 @@
     <item ID="ht" Name="Tanc greu" />
     <item ID="mt" Name="Tanc mediu" />
     <item ID="lt" Name="Tanc uşor" />
-    <item ID="spg" Name="Artilerie" />
+    <item ID="spg" Name="Artilerii" />
     <item ID="unknown" Name="Necunoscut" />
   </Lang_TankClasses>
   <Lang_Maps>
@@ -1028,8 +1036,7 @@
     <item ID="92_stalingrad" Name="Stalingrad" />
     <item ID="95_lost_city" Name="Orașul fantomă" />
     <item ID="96_prohorovka_defense" Name="Fiery Salient" />
-    <item ID="h11_WGL_GrandFinal_2016" />
-    <item ID="h12_bday_EU_2015" />
+    <item ID="h13_bovtankfest_2016" />
     <item ID="03_campania" />
     <item ID="15_komarin" />
     <item ID="39_crimea" />
@@ -1057,7 +1064,6 @@
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
     <item ID="h10_summer_holiday_2016" />
-    <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="Himmelsdorf Arena" />
     <item ID="117_eiffelball" Name="Stade Eiffel" />
     <item ID="118_lostcityball" Name="Old Tankford" />
@@ -1254,7 +1260,7 @@
     <achv ID_Num="143" ID="medalBrothersInArms" Name="Camarazi de arme" />
     <achv ID_Num="144" ID="medalCrucialContribution" Name="Contribuţie decisivă" />
     <achv ID_Num="145" ID="medalDeLanglade" Name="Medalia De Langlade" />
-    <achv ID_Num="146" ID="medalTamadaYoshio" Name="Medalia lui Tamada Yoshio" />
+    <achv ID_Num="146" ID="medalTamadaYoshio" Name="Medalia Yoshio Tamada" />
     <achv ID_Num="147" ID="bombardier" Name="Bombardier" />
     <achv ID_Num="148" ID="huntsman" Name="Medalia Naidin" />
     <achv ID_Num="150" ID="sturdy" Name="Spartan" />
@@ -1950,7 +1956,7 @@
     <PM name="SPG-5: Împarte generos" short="StuG IV: SPG-5" desc="Provocarea șocurilor la vehiculele inamice nu doar că îți aduce echipa un pas mai aproape spre victorie, dar îți garantează și faptul că vei primi experiență și credite adiționale, dacă aliații tăi produc daune vehiculelor la care ai produs șoc. Nu uita să marchezi zona în care vei trage (cu tasta implicită T) pentru a notifica și a atrage atenția aliaților tăi." tMID="65" opID="1" mID="5" setID="5" ID="quest_1_5_5_main" secID="quest_1_5_5_add" minLvl="4" maxLvl="10" campID="1" camp="Sprijinul mult așteptat" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ajută-ți aliații să provoace daune de cel puțin 600 puncte vehiculelor inamice, fie prin provocarea unui șoc, fie prin imobilizare.</req>
+        <req>• Ajută-ți aliații să provoace daune de cel puțin 600 puncte vehiculelor inamice, fie prin provocarea de șoc, fie prin imobilizare.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Provoacă daune vehiculelor inamice de cel puțin 3 ori, cu obuze sau prin coliziune.</req>
@@ -1959,7 +1965,7 @@
     <PM name="SPG-6: Ciocanul zeilor" short="StuG IV: SPG-6" desc="Obiectivul principal al unei artilerii este de a oferi foc de sprijin vehiculelor aliate. Vehiculele inamice în stare de șoc au capacitatea de luptă redusă, așa că colegii tăi de echipă vor aprecia în mod sigur ajutorul tău. Totuși, fii atent când tragi: o lovitură neglijentă poate produce șoc și unui vehicul aliat. Focul asupra aliaților nu va fi tolerat!" tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Sprijinul mult așteptat" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Ajută-ți aliații să provoace daune la cel puțin 2 vehicule inamice, fie prin provocarea unui șoc, fie prin imobilizare.</req>
+        <req>• Ajută-ți aliații să provoace daune la cel puțin 2 vehicule inamice, fie prin provocarea de șoc, fie prin imobilizare.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Câștigă lupta.</req>
@@ -2040,7 +2046,7 @@
     <PM name="SPG-15: Zeii războiului" short="StuG IV: SPG-15" desc="O artilerie care supraviețuiește cât mai mult este un ajutor prețios pentru echipă. Continuă să tragi obuz după obuz, dar încearcă să nu intri sub tirul inamic. Gândește-te bine înainte să ”apeși pe trăgaci”, deoarece pentru un vehicul cu un timp de reîncărcare lung strategia cea mai bună este să nimerească toate focurile." tMID="75" opID="1" mID="15" setID="5" ID="quest_1_5_15_main" secID="quest_1_5_15_add" minLvl="4" maxLvl="10" campID="1" camp="Sprijinul mult așteptat" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Clasează-te între primii 5 jucători din echipa ta ca experiență câștigată.\n• Ajută-ți aliații să provoace daune de cel puțin 1000 puncte vehiculelor inamice, fie prin provocarea unui șoc, fie prin imobilizare.</req>
+        <req>• Clasează-te între primii 5 jucători din echipa ta ca experiență câștigată.\n• Ajută-ți aliații să provoace daune de cel puțin 1000 puncte vehiculelor inamice, fie prin provocarea de șoc, fie prin imobilizare.</req>
       </Primary>
       <Secondary fXP="0" cr="50000" slots="0" tokens="1" done="false">
         <req>• Supravieţuieşte luptei.</req>
@@ -4065,7 +4071,7 @@
     <PM name="SPG-15: Zeii războiului" short="Object 260: SPG-15" desc="O artilerie care supraviețuiește cât mai mult este un ajutor prețios pentru echipă. Continuă să tragi obuz după obuz, dar încearcă să nu intri sub tirul inamic. Gândește-te bine înainte să ”apeși pe trăgaci”, deoarece pentru un vehicul cu un timp de reîncărcare lung strategia cea mai bună este să nimerească toate focurile." tMID="300" opID="4" mID="15" setID="5" ID="quest_4_5_15_main" secID="quest_4_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="Sprijinul mult așteptat" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Termină lupta ca cel mai bun jucător din echipa ta, la experiență câștigată.\n• Ajută-ți aliații să provoace daune de cel puțin 3500 puncte vehiculelor inamice, provocându-le șoc sau imobilizându-le.</req>
+        <req>• Termină lupta ca cel mai bun jucător din ambele echipe, la experiență câștigată.\n• Ajută-ți aliații să provoace daune de cel puțin 3500 puncte vehiculelor inamice, provocându-le șoc sau imobilizându-le.</req>
       </Primary>
       <Secondary fXP="0" cr="500000" slots="0" tokens="1" done="false">
         <req>• Supravieţuieşte luptei.</req>
