--- a/data/lang/tr.xml
+++ b/data/lang/tr.xml
@@ -178,6 +178,8 @@
     <tank ID="Ch26_59_Patton" sName="59-Patton" lName="59-Patton" />
     <tank ID="Ch28_WZ_132A" sName="WZ-132A" lName="WZ-132A" />
     <tank ID="Ch29_Type_62C_prot" sName="WZ-132-1" lName="WZ-132-1" />
+    <tank ID="Ch39_WZ120_1G_FT" sName="WZ-120-1 FT" lName="WZ-120-1G FT" />
+    <tank ID="Ch40_WZ120G_FT" sName="WZ-120G FT" lName="WZ-120G FT" />
     <tank ID="Chi_Ha" sName="Chi-Ha" lName="Type 97 Chi-Ha" />
     <tank ID="Chi_He" sName="Chi-He" lName="Type 1 Chi-He" />
     <tank ID="Chi_Ni" sName="Chi-Ni" lName="Chi-Ni" />
@@ -334,6 +336,8 @@
     <tank ID="G125_Spz_57_Rh" sName="Rhm. Pzw." lName="Rheinmetall Panzerwagen" />
     <tank ID="G126_HWK_12" sName="HWK 12" lName="HWK 12" />
     <tank ID="G13_VK3001H" sName="VK 30.01 H" lName="VK 30.01 (H)" />
+    <tank ID="G134_PzKpfw_VII" sName="Pz.Kpfw. VII" lName="Pz.Kpfw. VII" />
+    <tank ID="G136_Tiger_131" sName="Tiger 131" lName="Tiger 131" />
     <tank ID="G14_PzIII_A" sName="Pz. III E" lName="Pz.Kpfw. III Ausf. E" />
     <tank ID="G15_VK3601H" sName="VK 36.01 H" lName="VK 36.01 (H)" />
     <tank ID="G16_PzVIB_Tiger_II" sName="Tiger II" lName="Tiger II" />
@@ -552,6 +556,8 @@
     <tank ID="J26_Type_89" sName="I-Go/Chi-Ro" lName="Type 89 I-Go/Chi-Ro" />
     <tank ID="J27_O_I_120" sName="O-Ho" lName="O-Ho" />
     <tank ID="J28_O_I_100" sName="O-Ni" lName="O-Ni" />
+    <tank ID="J29_Nameless" sName="Nameless" lName="Nameless" />
+    <tank ID="J30_Edelweiss" sName="Edelweiss" lName="Edelweiss" />
     <tank ID="JagdPanther" sName="JPanther" lName="Jagdpanther" />
     <tank ID="JagdPantherII" sName="JPanther II" lName="Jagdpanther II" />
     <tank ID="JagdPz_E100" sName="Jg.Pz. E 100" lName="Jagdpanzer E 100" />
@@ -735,7 +741,9 @@
     <tank ID="R133_KV_122" sName="KV-122" lName="KV-122" />
     <tank ID="R134_Object_252K" sName="Defender" lName="Object 252U Defender" />
     <tank ID="R134_Object_252U" sName="Obj. 252U" lName="Object 252U" />
+    <tank ID="R135_T_103" sName="T-103" lName="T-103" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
+    <tank ID="R143_T_29" sName="T-29" lName="T-29" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -1028,8 +1036,7 @@
     <item ID="92_stalingrad" Name="Stalingrad" />
     <item ID="95_lost_city" Name="Hayalet Kasaba" />
     <item ID="96_prohorovka_defense" Name="Ateş Hattı" />
-    <item ID="h11_WGL_GrandFinal_2016" />
-    <item ID="h12_bday_EU_2015" />
+    <item ID="h13_bovtankfest_2016" />
     <item ID="03_campania" />
     <item ID="15_komarin" />
     <item ID="39_crimea" />
@@ -1057,7 +1064,6 @@
     <item ID="h12_bday_eu_2015" />
     <item ID="119_moon_pool" />
     <item ID="h10_summer_holiday_2016" />
-    <item ID="h13_bovtankfest_2016" />
     <item ID="116_himmelball" Name="Himmelsdorf Arena" />
     <item ID="117_eiffelball" Name="Eyfel Stadı" />
     <item ID="118_lostcityball" Name="Old Tankford" />
@@ -1950,7 +1956,7 @@
     <PM name="KMT-5: Paylaşmak Önemsemektir" short="StuG IV: KMT-5" desc="Düşman araçlarını şoka sokmak sadece ekibinizi zafere yaklaştırmakla kalmaz, şoka soktuğunuz düşman araçlarına müttefikleriniz hasar verirse ek deneyim ve kredi kazanmanızı sağlar. Nişan aldığınız yeri işaretleyerek (varsayılan olarak T tuşu) müttefiklerinizin dikkatini çekip bilgilendirmeyi unutmayın." tMID="65" opID="1" mID="5" setID="5" ID="quest_1_5_5_main" secID="quest_1_5_5_add" minLvl="4" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Düşman araçlarını şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin en az 600 hasar vermesini sağlayın.</req>
+        <req>• Şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin düşman araçlarına en az 600 hasar vermelerini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Düşman araçlarına ateş ederek veya çarparak en az 3 kere hasar verin.</req>
@@ -1959,7 +1965,7 @@
     <PM name="KMT-6: Tanrıların Çekici" short="StuG IV: KMT-6" desc="KMT'lerin ana hedefi müttefik araçlara ateş desteği sağlamaktır. Şoka giren düşman araçlarının savaş yeteneği azalır o yüzden ekip arkadaşlarınız desteğinizi takdir edecektir. Ancak, ateş ederken dikkatli olun: dikkatsiz bir atış müttefik bir aracı da şoka sokabilir. Dost ateşi kabul edilemez!" tMID="66" opID="1" mID="6" setID="5" ID="quest_1_5_6_main" secID="quest_1_5_6_add" minLvl="4" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Şoka sokarak veya hareketsiz bırakarak müttefiklerinizin en az 2 düşman aracında hasar vermesini sağlayın.</req>
+        <req>• Şoka sokarak veya hareketsiz bırakarak müttefiklerinizin en az 2 düşman aracına hasar vermesini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="0" done="false">
         <req>• Savaşı kazanın.</req>
@@ -2040,7 +2046,7 @@
     <PM name="KMT-15: Savaş Tanrıları" short="StuG IV: KMT-15" desc="Mümkün olduğunca uzun süre hayatta kalan bir KMT ekip için gerçek bir değerdir. Düşman ateşine maruz kalmadan mermi ardına mermi atmaya devam edin. Acele etmeyin ve \&quot;tetiği çekmeden\&quot; önce iki kere düşünün çünkü \&quot;bir atış-bir isabet\&quot; uzun yükleme süresine sahip bir araç için en iyi stratejidir." tMID="75" opID="1" mID="15" setID="5" ID="quest_1_5_15_main" secID="quest_1_5_15_add" minLvl="4" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Kazanılan deneyimde ve verilen hasarda ekibinizdeki oyuncular arasında ilk 5'e girin.\n• Düşman araçlarını şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin en az 1.000 hasar vermelerini sağlayın.</req>
+        <req>• Kazanılan deneyimde ekibinizdeki oyuncular arasında ilk 5'e girin.\n• Şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin düşman araçlarına en az 1.000 hasar vermelerini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="50000" slots="0" tokens="1" done="false">
         <req>• Savaşta canlı kalın.</req>
@@ -2625,7 +2631,7 @@
     <PM name="KMT-5: Paylaşmak Önemsemektir" short="Т28 Heavy Tank Concept: KMT-5" desc="Düşman araçlarını şoka sokmak sadece ekibinizi zafere yaklaştırmakla kalmaz, şoka soktuğunuz düşman araçlarına müttefikleriniz hasar verirse ek deneyim ve kredi kazanmanızı sağlar. Nişan aldığınız yeri işaretleyerek (varsayılan olarak T tuşu) müttefiklerinizin dikkatini çekip bilgilendirmeyi unutmayın." tMID="140" opID="2" mID="5" setID="5" ID="quest_2_5_5_main" secID="quest_2_5_5_add" minLvl="5" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="Т28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Düşman araçlarını şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin en az 1.000 hasar vermesini sağlayın.</req>
+        <req>• Şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin düşman araçlarına en az 1.000 hasar vermelerini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="0" done="false">
         <req>• Düşman araçlarına ateş ederek veya çarparak en az 5 kere hasar verin.</req>
@@ -2634,7 +2640,7 @@
     <PM name="KMT-6: Tanrıların Çekici" short="Т28 Heavy Tank Concept: KMT-6" desc="KMT'lerin ana hedefi müttefik araçlara ateş desteği sağlamaktır. Şoka giren düşman araçlarının savaş yeteneği azalır o yüzden ekip arkadaşlarınız desteğinizi takdir edecektir. Ancak, ateş ederken dikkatli olun: dikkatsiz bir atış müttefik bir aracı da şoka sokabilir. Dost ateşi kabul edilemez!" tMID="141" opID="2" mID="6" setID="5" ID="quest_2_5_6_main" secID="quest_2_5_6_add" minLvl="5" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="Т28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Şoka sokarak veya hareketsiz bırakarak müttefiklerinizin en az 3 düşman aracında hasar vermesini sağlayın.</req>
+        <req>• Şoka sokarak veya hareketsiz bırakarak müttefiklerinizin en az 3 düşman aracına hasar vermesini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="0" done="false">
         <req>• Savaşı kazanın.</req>
@@ -2715,7 +2721,7 @@
     <PM name="KMT-15: Savaş Tanrıları" short="Т28 Heavy Tank Concept: KMT-15" desc="Mümkün olduğunca uzun süre hayatta kalan bir KMT ekip için gerçek bir değerdir. Düşman ateşine maruz kalmadan mermi ardına mermi atmaya devam edin. Acele etmeyin ve \&quot;tetiği çekmeden\&quot; önce iki kere düşünün çünkü \&quot;bir atış-bir isabet\&quot; uzun yükleme süresine sahip bir araç için en iyi stratejidir." tMID="150" opID="2" mID="15" setID="5" ID="quest_2_5_15_main" secID="quest_2_5_15_add" minLvl="5" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="Т28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Kazanılan deneyimde ve verilen hasarda ekibinizdeki oyuncular arasında ilk 3'e girin.\n• Düşman araçlarını şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin en az 1.500 hasar vermelerini sağlayın.</req>
+        <req>• Kazanılan deneyimde ekibinizdeki oyuncular arasında ilk 3'e girin.\n• Şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin düşman araçlarına en az 1.500 hasar vermelerini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="100000" slots="0" tokens="1" done="false">
         <req>• Savaşta canlı kalın.</req>
@@ -3300,7 +3306,7 @@
     <PM name="KMT-5: Paylaşmak Önemsemektir" short="T 55A: KMT-5" desc="Düşman araçlarını şoka sokmak sadece ekibinizi zafere yaklaştırmakla kalmaz, şoka soktuğunuz düşman araçlarına müttefikleriniz hasar verirse ek deneyim ve kredi kazanmanızı sağlar. Nişan aldığınız yeri işaretleyerek (varsayılan olarak T tuşu) müttefiklerinizin dikkatini çekip bilgilendirmeyi unutmayın." tMID="215" opID="3" mID="5" setID="5" ID="quest_3_5_5_main" secID="quest_3_5_5_add" minLvl="6" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Düşman araçlarını şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin en az 2.000 hasar vermesini sağlayın.</req>
+        <req>• Şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin düşman araçlarına en az 2.000 hasar vermelerini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="0" done="false">
         <req>• Düşman araçlarına ateş ederek veya çarparak en az 6 kere hasar verin.</req>
@@ -3309,7 +3315,7 @@
     <PM name="KMT-6: Tanrıların Çekici" short="T 55A: KMT-6" desc="KMT'lerin ana hedefi müttefik araçlara ateş desteği sağlamaktır. Şoka giren düşman araçlarının savaş yeteneği azalır o yüzden ekip arkadaşlarınız desteğinizi takdir edecektir. Ancak, ateş ederken dikkatli olun: dikkatsiz bir atış müttefik bir aracı da şoka sokabilir. Dost ateşi kabul edilemez!" tMID="216" opID="3" mID="6" setID="5" ID="quest_3_5_6_main" secID="quest_3_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Şoka sokarak veya hareketsiz bırakarak müttefiklerinizin en az 5 düşman aracında hasar vermesini sağlayın.</req>
+        <req>• Şoka sokarak veya hareketsiz bırakarak müttefiklerinizin en az 5 düşman aracına hasar vermesini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="0" done="false">
         <req>• Savaşta canlı kalın.\n• Savaşı kazanın.</req>
@@ -3390,7 +3396,7 @@
     <PM name="KMT-15: Savaş Tanrıları" short="T 55A: KMT-15" desc="Mümkün olduğunca uzun süre hayatta kalan bir KMT ekip için gerçek bir değerdir. Düşman ateşine maruz kalmadan mermi ardına mermi atmaya devam edin. Acele etmeyin ve \&quot;tetiği çekmeden\&quot; önce iki kere düşünün çünkü \&quot;bir atış-bir isabet\&quot; uzun yükleme süresine sahip bir araç için en iyi stratejidir." tMID="225" opID="3" mID="15" setID="5" ID="quest_3_5_15_main" secID="quest_3_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Savaşı, kazanılan deneyimde ekibinizdeki oyuncular arasında birinci olarak tamamlayın.\n• Düşman araçlarını şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin en az 2.500 hasar vermesini sağlayın.</req>
+        <req>• Savaşı, kazanılan deneyimde ekibinizdeki oyuncular arasında birinci olarak tamamlayın.\n• Şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin düşman araçlarına en az 2.500 hasar vermelerini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="250000" slots="0" tokens="1" done="false">
         <req>• Savaşta canlı kalın.</req>
@@ -3975,7 +3981,7 @@
     <PM name="KMT-5: Paylaşmak Önemsemektir" short="Object 260: KMT-5" desc="Düşman araçlarını şoka sokmak sadece ekibinizi zafere yaklaştırmakla kalmaz, şoka soktuğunuz düşman araçlarına müttefikleriniz hasar verirse ek deneyim ve kredi kazanmanızı sağlar. Nişan aldığınız yeri işaretleyerek (varsayılan olarak T tuşu) müttefiklerinizin dikkatini çekip bilgilendirmeyi unutmayın." tMID="290" opID="4" mID="5" setID="5" ID="quest_4_5_5_main" secID="quest_4_5_5_add" minLvl="6" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Şoka sokarak veya hareketsiz bırakarak müttefiklerinizin düşman araçlarına en az 3.000 hasar vermesini sağlayın.</req>
+        <req>• Şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin düşman araçlarına en az 3.000 hasar vermelerini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• Düşman araçlarına ateş ederek veya çarparak en az 8 kere hasar verin.</req>
@@ -3984,7 +3990,7 @@
     <PM name="KMT-6: Tanrıların Çekici" short="Object 260: KMT-6" desc="KMT'lerin ana hedefi müttefik araçlara ateş desteği sağlamaktır. Şoka giren düşman araçlarının savaş yeteneği azalır o yüzden ekip arkadaşlarınız desteğinizi takdir edecektir. Ancak, ateş ederken dikkatli olun: dikkatsiz bir atış müttefik bir aracı da şoka sokabilir. Dost ateşi kabul edilemez!" tMID="291" opID="4" mID="6" setID="5" ID="quest_4_5_6_main" secID="quest_4_5_6_add" minLvl="6" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="0" done="false">
-        <req>• Şoka sokarak veya hareketsiz bırakarak müttefiklerinizin en az 6 düşman aracında hasar vermesini sağlayın.</req>
+        <req>• Şoka sokarak veya hareketsiz bırakarak müttefiklerinizin en az 6 düşman aracına hasar vermesini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="0" done="false">
         <req>• Savaşta canlı kalın.\n• Savaşı kazanın.</req>
@@ -4065,7 +4071,7 @@
     <PM name="KMT-15: Savaş Tanrıları" short="Object 260: KMT-15" desc="Mümkün olduğunca uzun süre hayatta kalan bir KMT ekip için gerçek bir değerdir. Düşman ateşine maruz kalmadan mermi ardına mermi atmaya devam edin. Acele etmeyin ve \&quot;tetiği çekmeden\&quot; önce iki kere düşünün çünkü \&quot;bir atış-bir isabet\&quot; uzun yükleme süresine sahip bir araç için en iyi stratejidir." tMID="300" opID="4" mID="15" setID="5" ID="quest_4_5_15_main" secID="quest_4_5_15_add" minLvl="6" maxLvl="10" campID="1" camp="Uzun Süredir Beklenen Destek" reward="Object 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="4" done="false">
-        <req>• Savaşı, kazanılan deneyimde her iki ekipteki oyuncular arasında birinci olarak tamamlayın.\n• Düşman araçlarını şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin en az 3.500 hasar vermesini sağlayın.</req>
+        <req>• Savaşı, kazanılan deneyimde her iki ekipteki oyuncular arasında birinci olarak tamamlayın.\n• Şoka sokarak veya hareketsiz hale getirerek müttefiklerinizin düşman araçlarına en az 3.500 hasar vermelerini sağlayın.</req>
       </Primary>
       <Secondary fXP="0" cr="500000" slots="0" tokens="1" done="false">
         <req>• Savaşta canlı kalın.</req>
